--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Captura de Foto</title>
+    <title>52_OmarSantos_APICAMARA</title>
     <style>
         body {
             text-align: center;
@@ -74,3 +74,4 @@
     </script>
 </body>
 </html>
+
